2010-12-21  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Set BUILDING_QT__ consistently
        https://bugs.webkit.org/show_bug.cgi?id=51341

        * JavaScriptCore.pri: Remove the definition of BUILDING_QT__ as it
        is already defined in WebKit.pri.

2010-12-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 26276 - Need a mechanism to determine stack extent

        This patch adds accurate stack size calculation for:
            DARWIN, WINDOWS, QNX, UNIX
        We still need to fix:
            SOLARIS, OPENBSD, SYMBIAN, HAIKU, WINCE

        * wtf/StackBounds.cpp:
        (WTF::StackBounds::initialize):

2010-12-20  Gavin Barraclough  <barraclough@apple.com>

        PPC build fix; stop using std::swap on PageAllocation/PageReservation,
        this was failing on some compilers since the lack of default construction
        for the m_executable/m_writable fields meant the value being swapped may
        not have been fully initialized.

        * wtf/PageAllocation.h:
        (WTF::PageAllocation::deallocate):
        * wtf/PageBlock.h:
        * wtf/PageReservation.h:
        (WTF::PageReservation::deallocate):

2010-12-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        |delete name| in strict mode code should be an early error
        https://bugs.webkit.org/show_bug.cgi?id=50431

        Disallow the |delete IDENTIFIER| production in strict mode, and removed
        a bunch of now unnecessary code.

        * parser/JSParser.cpp:
        (JSC::JSParser::Scope::collectFreeVariables):
        (JSC::jsParse):
        (JSC::JSParser::parseProgram):
        (JSC::JSParser::parseUnaryExpression):
        * parser/JSParser.h:
        * parser/Parser.cpp:
        (JSC::Parser::parse):
        * parser/Parser.h:
        (JSC::Parser::parse):

2010-12-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Olver Hunt.
