@@ -1,3 +1,13 @@
+2010-12-21  Peter Varga  <pvarga@inf.u-szeged.hu>
+
+        Reviewed by Csaba Osztrogonác.
+
+        Unify the name of parentheses in YARR: rename parenthesis to
+        parentheses.
+
+        * yarr/RegexCompiler.cpp:
+        (JSC::Yarr::RegexPatternConstructor::atomParenthesesEnd):
+
 2010-12-21  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Reviewed by Andreas Kling.
